# Command-Control

./: CMakeLists.txt
Agent/include/: commands.h  network.h
Agent/src/: commands.c  exploit.cpp  main.c  network.c
Server/: c2server.py
Server/uploads/22aeb2c8-ba23-4b52-bd32-9f32a9baf947/: a.txt
Server/uploads/5f45b6ec-3545-4dc7-872e-fbc251961905/: projectlog.txt
